--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,12 @@ repository = "https://github.com/alecdesjardins/grrs"
 [dependencies]
 clap = { version = "4.4.12", features = ["derive"] }
 anyhow = "1.0.79"
+log = "0.4.20"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
 predicates = "3.0.4"
 assert_fs = "1.1.0"
+
+[build-dependencies]
+clap_mangen = "0.2.16"
